@@ -2,6 +2,9 @@
 
 	* gtk/Makefile.am (gtkmarshal.c gtkmarshal.h): Pass $srcdir in
 	environment to genmarshal.pl.
+	(gtk.defs,gtktypebuiltins*): Add $(srcdir) where needed (in the
+	rule), and removed it where not needed (in the dependencies).
+
 	* gtk/genmarshal.pl: Look for `gtkmarshal.list' in $srcdir.
 
 Tue Jun  9 18:44:57 1998  Owen Taylor  <otaylor@gtk.org>
